--- a/OneStopShop.API/OneStopShop.API/Dockerfile
+++ b/OneStopShop.API/OneStopShop.API/Dockerfile
@@ -1,18 +1,15 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
-#For more information, please see https://aka.ms/containercompat
-
 FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 5000
+
+ENV ASPNETCORE_URLS=http://+:5000
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["OneStopShop.API/OneStopShop.API.csproj", "OneStopShop.API/"]
-RUN dotnet restore "OneStopShop.API/OneStopShop.API.csproj"
+COPY ["OneStopShop.API.csproj", "./"]
+RUN dotnet restore "OneStopShop.API.csproj"
 COPY . .
-WORKDIR "/src/OneStopShop.API"
+WORKDIR "/src/."
 RUN dotnet build "OneStopShop.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
