--- a/onestopshopvueui/.dockerignore
+++ b/onestopshopvueui/.dockerignore
@@ -11,15 +11,14 @@
 **/*.*proj.user
 **/*.dbmdl
 **/*.jfm
-**/azds.yaml
-/bin
+**/bin
 **/charts
 **/docker-compose*
+**/compose*
 **/Dockerfile*
 **/node_modules
 **/npm-debug.log
-/obj
+**/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
-LICENSE
 README.md
