--- a/OneStopShop.API/OneStopShop.API/appsettings.json
+++ b/OneStopShop.API/OneStopShop.API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "TestDBConnectionString": "Server=localhost;Database=postgres;Port=6543;User id=postgres;Password=Max123;",
-    "LoggingDBConnectionString": "Server=onestopshopapi_postgres_1;Database=loggingdatabase;Port=5432;User id=postgres;Password=Max123;"
+    "TestDBConnectionString": "Server=host.docker.internal;Database=postgres;Port=6543;User id=postgres;Password=Max123;",
+    "LoggingDBConnectionString": "Server=host.docker.internal;Database=postgres;Port=6543;User id=postgres;Password=Max123;"
   },
   "Logging": {
     "IncludeScopes": false,
