--- a/OneStopShop.API/OneStopShop.API/docker-compose.yml
+++ b/OneStopShop.API/OneStopShop.API/docker-compose.yml
@@ -14,7 +14,27 @@ services:
             max-file: "3"
         ports:
           - '6543:5432'
+        networks:
+          - my-network
+        container_name: postgresdb
         volumes:
           - ./postgres-data:/var/lib/postgresql/data
           # copy the sql script to create tables
           - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
+    onestopshopapi:
+        image: onestopshopapi
+        build: .
+        networks:
+          - my-network
+        ports: 
+          - '11201:5000'
+    onestopshopui:
+      image: onestopshopwebsite
+      build: ./onestopshopvueui
+      networks:
+        - my-network
+      ports:
+        - '8080:80'  
+networks:
+  my-network:
+    external: true
